--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -17,7 +17,7 @@
 <body>
   <button class="add" id="add"><i class="fas fa-plus"></i> Add note</button>
 
-  <!-- Both scripts below bring in marked as an object, though they weren't identical when I looked at them on 11/15/2021. But we need to use the method ".parse", not "marked() by itself" -->
+  <!-- Both scripts below bring in 'marked' as an object, though they weren't identical when I looked at them on 11/15/2021. But we need to use the method ".parse", not "marked() by itself" -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/4.0.2/marked.min.js" referrerpolicy="no-referrer"></script>
   <!-- <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script> -->
   <script src="script.js"></script>
