--- a/dad-jokes/index.html
+++ b/dad-jokes/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <div class="container">
-    <h3>Don't Laught Challenge</h3>
+    <h3>Don't Laugh Challenge</h3>
     <div id="joke" class="joke">
       // Joke goes here
     </div>
