--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <title>50 Projects in 50 Days</title>
 </head>
 
 <body>
+  <h1>50 Projects in 50 Days</h1>
+  <div id="projects">
 
+  </div>
+  <script src="50-projects.js"></script>
 </body>
-<script src="50-projects.js"></script>
-<!-- <script src="testNull.js"></script> -->
-<!-- <script src="script1.js"></script>
-<script src='script2.js'></script> -->
 
 </html>
