--- a/3d-boxes-background/index.html
+++ b/3d-boxes-background/index.html
@@ -12,6 +12,9 @@
 
 <body>
   <button id="btn" class="magic">Magic </button>
+  <div id="boxes" class="boxes big">
+    <!-- (boxes to be inserted by js) -->
+  </div>
   <script src="script.js"></script>
 </body>
 
