--- a/custom-range-slider/index.html
+++ b/custom-range-slider/index.html
@@ -7,24 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
   <link rel="stylesheet" href="style.css">
-  <title>Live User Filter</title>
+  <title>My Project</title>
 </head>
 
 <body>
-  <div class="container">
-    <header class="header">
-      <h4 class="title">Live User Filter</h4>
-      <small class="subtitle">Search by name and/or location</small>
-      <input type="text" id="filter" placeholder="search">
-    </header>
-    <ul id="result" class="user-list">
-
-
-      <li>
-        <h3>Loading...</h3>
-      </li>
-    </ul>
-  </div>
+  <h1>Project Starter</h1>
   <script src="script.js"></script>
 </body>
 
