--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>50 Projects in 50 Days</title>
+  <title>Miscellaneous Front-End Projects</title>
 </head>
 
 <body>
-  <h1>50 Projects in 50 Days</h1>
-  <div id="projects">
+  <header class='header'>
+    <h1 class='title'>Miscellaneous Front-End Projects</h1>
+  </header>
 
+  <div id="projects-container">
+    <div id="projects">
+
+    </div>
   </div>
   <script src="50-projects.js"></script>
 </body>
