--- a/drag-n-drop/index.html
+++ b/drag-n-drop/index.html
@@ -11,13 +11,21 @@
 </head>
 
 <body>
-  <div class="empty">
-    <div class="fill" draggable="true"></div>
+  <div id="container">
+
+    <h1 class="header">Drag image from Box to Box</h1>
+    <div id="box-container">
+      <div class="empty">
+        <div class="fill" draggable="true"></div>
+      </div>
+      <div class="empty"></div>
+      <div class="empty"></div>
+      <div class="empty"></div>
+      <div class="empty"></div>
+
+    </div>
+
   </div>
-  <div class="empty"></div>
-  <div class="empty"></div>
-  <div class="empty"></div>
-  <div class="empty"></div>
   <script src="script.js"></script>
 </body>
 
