--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
   <header class='header'>
     <h1 class='title'>Miscellaneous Front-End Projects</h1>
+    <h2 id="random"></h2>
   </header>
 
   <div id="projects-container">
