--- a/3d-boxes-background/index.html
+++ b/3d-boxes-background/index.html
@@ -4,6 +4,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <!-- Below is supposed to force refresh. Sometimes wasn't happening: -->
+  <meta http-equiv="cache-control" content="no-cache, must-revalidate, post-check=0, pre-check=0" />
+  <meta http-equiv="cache-control" content="max-age=0" />
+  <meta http-equiv="expires" content="0" />
+  <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+  <meta http-equiv="pragma" content="no-cache" />
+  <!--  -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <link rel="stylesheet" href="style.css">
@@ -11,7 +18,7 @@
 </head>
 
 <body>
-  <button id="btn" class="magic">Magic </button>
+  <button id="btn" class="magic">Magic (Press Me) </button>
   <div id="boxes" class="boxes big">
     <!-- (boxes to be inserted by js) -->
   </div>
