--- a/custom-range-slider/index.html
+++ b/custom-range-slider/index.html
@@ -11,7 +11,12 @@
 </head>
 
 <body>
-  <h1>Project Starter</h1>
+  <h2>Custom Range Slider</h2>
+  <h3>To change the default behavior of input range sliders it is necessary to disable the styling in the browser, then implement browser-specific customization. That is what has been done here.</h3>
+  <div class="range-container">
+    <input type="range" id="range" , min="0" max="100">
+    <label for="range">50</label>
+  </div>
   <script src="script.js"></script>
 </body>
 
