add explanation to Netflix-Mobile-Navigation, Switching on click for Kinetic Loader

--- a/quiz-app/index.html
+++ b/quiz-app/index.html
@@ -7,23 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
   <link rel="stylesheet" href="style.css">
-  <!-- style.css - 2 rotating triangles, style2.css - 4 spinning eggs/circles moving in and out, style3.css - pulsing rising colored circles. style4.css - rising blue circles -->
-  <title>Kinetic Loader</title>
+  <title>My Project</title>
 </head>
 
 <body>
-  <div id="container" class="style1">
-    <h2 class="instructions">Click on loader to switch</h2>
-    <div class="kinetic">
-      <div class="mover-container">
-        <div id="k1" class="spinner"></div>
-        <div id="k2" class="spinner"></div>
-        <div id="k3" class="spinner"></div>
-        <div id="k4" class="spinner"></div>
-      </div>
-    </div>
-  </div>
-
+  <h1>Project Starter</h1>
   <script src="script.js"></script>
 </body>
 
