--- a/random-image-feed/index.html
+++ b/random-image-feed/index.html
@@ -7,11 +7,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
   <link rel="stylesheet" href="style.css">
-  <title>My Project</title>
+  <title>Random Image Feed</title>
 </head>
 
 <body>
-  <h1>Project Starter</h1>
+  <h1>Random Image Feed</h1>
+  <div id="container">
+
+  </div>
+  <!-- <h1>Alternatively...</h1>
+  <div class="container">
+
+  </div> -->
   <script src="script.js"></script>
 </body>
 
