Infinity Scroll -> Infinite Scroll

--- a/infinite-scroll/index.html
+++ b/infinite-scroll/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/png" href="https://www.google.com/s2/u/0/favicons?domain=jacinto.design">
 
   <link rel="stylesheet" href="style.css">
-  <title>Template</title>
+  <title>Infinite Scroll</title>
 </head>
 
 <body>
