Message changes on insect catch game

--- a/insect-catch-game/index.html
+++ b/insect-catch-game/index.html
@@ -63,9 +63,12 @@
   <div id="game-container" class="screen game-container">
     <h3 id="time" class="time">Time: 00:00</h3>
     <h3 id="score" class="score">Score: 0</h3>
-    <h5 id="message" class="message">
-      Are you annoyed yet? <br> There is no winning this game! Or quitting, or breaking even. It's like thermodynamics.<br> <br>And yes, spiders aren't really insects.
-    </h5>
+    <div id="message" class="message">
+      <h5>
+        Are you annoyed yet? <br> There is no winning this game! Or quitting, or breaking even. It's like thermodynamics.
+      </h5>
+      <h6>And yes, spiders aren't really insects.</h6>
+    </div>
   </div>
 
   <script src="script.js"></script>
