--- a/insect-catch-game/index.html
+++ b/insect-catch-game/index.html
@@ -34,7 +34,7 @@
         <button class="choose-insect-btn">
             <p>Mosquito</p>
             <img
-              src="http://pngimg.com/uploads/mosquito/mosquito_PNG18175.png"
+              src="https://pngimg.com/uploads/mosquito/mosquito_PNG18175.png"
               alt="mosquito"
             />
           </button>
@@ -43,7 +43,7 @@
         <button class="choose-insect-btn">
             <p>Spider</p>
             <img
-              src="http://pngimg.com/uploads/spider/spider_PNG12.png"
+              src="https://pngimg.com/uploads/spider/spider_PNG12.png"
               alt="spider"
             />
           </button>
@@ -52,7 +52,7 @@
         <button class="choose-insect-btn">
             <p>Roach</p>
             <img
-              src="http://pngimg.com/uploads/roach/roach_PNG12163.png"
+              src="https://pngimg.com/uploads/roach/roach_PNG12163.png"
               alt="roach"
             />
           </button>
