--- a/blury-loading/index.html
+++ b/blury-loading/index.html
@@ -14,6 +14,7 @@
 <body>
   <section class="bg"></section>
   <div class="loading-text">0%</div>
+  <button class="reload hidden">Click to Reload</button>
   <script src="script.js"></script>
 </body>
 
