move 50-projects-i files to own folder, various fixes & enhancements

--- a/50-projects/index.html
+++ b/50-projects/index.html
@@ -12,30 +12,23 @@
   <meta http-equiv="pragma" content="no-cache" />
   <!--  -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="50-projects-i.css">
+  <link rel="stylesheet" href="style.css">
   <title>Miscellaneous Front-End Projects</title>
 </head>
 
 <body>
-  <div class="loader" id="loader">
-    <span id="loading-message">Loading... </span>
-    <img src="loader.svg" alt="Loading...">
-  </div>
   <header class='header'>
     <h1 class='title'>Miscellaneous Front-End Projects</h1>
     <h2 id="random"></h2>
   </header>
 
-
   <div id="projects-container">
-    <div id="projects" style="visibility: hidden">
+    <div id="projects">
 
     </div>
   </div>
-  <div id="full-screen-message">
-    Double-click in any box to open app in full screen
-  </div>
-  <script src="50-projects-i.js"></script>
+  <script src="50-projects.js"></script>
+  <script src="../iframe-full.js"></script>
 </body>
 
 </html>
