--- a/picture-in-picture/index.html
+++ b/picture-in-picture/index.html
@@ -14,10 +14,18 @@
 <body>
   <!-- Video -->
   <video id="video" controls height="360" width="640" hidden></video>
-  <!-- Button -->
-  <div class="button-container">
-    <button id="button">START</button>
+  <h1>Put any Screen, Window, or Chrome Tab in a Floating Window</h1>
+  <div id="buttons-container">
+    <!-- Select Source Button -->
+    <div class="button-container">
+      <button id="source-button">Select Source</button>
+    </div>
+    <!-- Button -->
+    <div class="button-container">
+      <button id="start-button">Start Sharing</button>
+    </div>
   </div>
+
   <script src="script.js"></script>
   <script src="../iframe-full.js"></script>
 </body>
