--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- Stub to access Netlify version from anywhere -->
 
 <head>
   <meta charset="UTF-8">
@@ -17,17 +18,10 @@
 </head>
 
 <body>
-  <header class='header'>
-    <h1 class='title'>Miscellaneous Front-End Projects</h1>
-    <h2 id="random"></h2>
-  </header>
 
-  <div id="projects-container">
-    <div id="projects">
-
-    </div>
-  </div>
-  <script src="50-projects.js"></script>
+  <script>
+    document.location = './50-projects-iframe/50-projects-i.html';
+  </script>
 </body>
 
 </html>
