--- a/theme-clock/index.html
+++ b/theme-clock/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style2.css">
+  <link rel="stylesheet" href="style.css">
   <title>Theme Clock</title>
 </head>
 
 <body>
-  <button class="toggle">Dark mode</button>
+  <button class="toggle-button">Dark mode</button>
   <div class="clock-container">
     <div class="clock">
       <div class="needle hour"></div>
@@ -22,8 +22,8 @@
     <div class="date"></div>
   </div>
 
-  <script src="script2.js"></script>
   <script src="../iframe-full.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
