--- a/50.html
+++ b/50.html
@@ -13,8 +13,8 @@
   <meta http-equiv="pragma" content="no-cache" />
   <!--  -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Miscellaneous Front-End Projects</title>
+  <!-- <link rel="stylesheet" href="style.css">
+  <title>Miscellaneous Front-End Projects</title> -->
 </head>
 
 <body>
