Responsive fix for Drag-n-Drop, incl removing css that didn't make sense

--- a/incrementing-counter/index.html
+++ b/incrementing-counter/index.html
@@ -28,7 +28,7 @@
       <div class="counter" data-target="7500"></div>
       <span>Facebook Fans</span>
     </div>
-    <button id="reload-button" class="reload hidden">Click to Reload</button>
+    <button id="reload-button" class="reload hidden">Click to Rerun</button>
 
   </div>
 
