Content Placeholder - responsive adjustments

--- a/50-projects-iframe/50-projects-i.html
+++ b/50-projects-iframe/50-projects-i.html
@@ -19,6 +19,7 @@
 <body>
   <div class="loader" id="loader">
     <span id="loading-message">Loading... </span>
+    <span id="loading-remaining"></span>
     <img src="loader.svg" alt="Loading...">
   </div>
   <header class='header'>
