--- a/sticky-navbar/index.html
+++ b/sticky-navbar/index.html
@@ -17,11 +17,11 @@
       <h1 class="logo">
         <a href="/index.html">My Website</a>
       </h1>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="">About</a></li>
-        <li><a href="">Services</a></li>
-        <li><a href="">Contact</a></li>
+      <ul class="nav-links">
+        <li class="nav-link"><a href="#">Home</a></li>
+        <li class="nav-link"><a href="">About</a></li>
+        <li class="nav-link"><a href="">Services</a></li>
+        <li class="nav-link"><a href="">Contact</a></li>
       </ul>
     </div>
   </nav>
