--- a/50-projects-iframe/50-projects-i.html
+++ b/50-projects-iframe/50-projects-i.html
@@ -18,10 +18,17 @@
 
 <body>
   <div class="loader" id="loader">
-    <span id="loading-message">Loading... </span>
-    <span id="loading-remaining"></span>
-    <img src="loader.svg" alt="Loading...">
+    <div class="loading-message">
+      <span id="loading-message">Loading... </span>
+      <span id="loading-remaining"></span>
+      <img src="loader.svg" alt="Loading...">
+    </div>
+    <div id="loading-instructions">
+      <p>For any project, double click on the box to show it in full-screen mode (then press "Esc" key to exit full-screen and see the main page again).</p>
+      <p>Or click on the link below the box to open the project in another tab</p>
+    </div>
   </div>
+
   <header class='header'>
     <h1 class='title'>Miscellaneous Front-End Projects</h1>
     <h2 id="random"></h2>
@@ -36,6 +43,7 @@
   <div id="full-screen-message">
     Double-click in any box to open app in full screen
   </div>
+
   <script src="50-projects-i.js"></script>
 </body>
 
