Misc Projects - enhance loading message. Animated Countdown reorganization, relabeling, etc.

--- a/50-projects-iframe/50-projects-i.html
+++ b/50-projects-iframe/50-projects-i.html
@@ -24,7 +24,8 @@
       <img src="loader.svg" alt="Loading...">
     </div>
     <div id="loading-instructions">
-      <p>For any project, double click on the box to show it in full-screen mode (then press "Esc" key to exit full-screen and see the main page again).</p>
+      <p>For any project, double click on the box to show it in full-screen mode.</p>
+      <!-- (Then press "Esc" key to exit full-screen and see the main page again.) -->
       <p>Or click on the link below the box to open the project in another tab</p>
     </div>
   </div>
