--- a/animated-countdown/index.html
+++ b/animated-countdown/index.html
@@ -11,20 +11,23 @@
 </head>
 
 <body>
-
   <div class="counter">
-    <div class="nums">
-      <span class="in">3</span>
-      <span>2</span>
-      <span>1</span>
-      <span>0</span>
+    <div id="num-container">
+      <div id="nums">
+        <span class="in">3</span>
+        <span>2</span>
+        <span>1</span>
+        <span>0</span>
+      </div>
+      <h4>Get Ready</h4>
     </div>
-    <h4>Get Ready</h4>
+    <div id="go">
+      <h1>GO</h1>
+    </div>
   </div>
 
-  <div class="final">
-    <h1>GO</h1>
-    <button id="replay">Replay</button>
+  <div id="play">
+    <button>Start Countdown</button>
   </div>
 
   <script src="script.js"></script>
