Misc Front End - remove header from loading screen and have fade in

--- a/50-projects-iframe/50-projects-i.html
+++ b/50-projects-iframe/50-projects-i.html
@@ -30,7 +30,7 @@
     </div>
   </div>
 
-  <header class='header'>
+  <header class='header' style="visibility: hidden">
     <h1 class='title'>Miscellaneous Front-End Projects</h1>
     <h2 id="random"></h2>
   </header>
