--- a/animated-countdown-original/index.html
+++ b/animated-countdown-original/index.html
@@ -1,3 +1,5 @@
+<!-- @format -->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,33 +8,27 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
   <title>Animated Countdown</title>
 </head>
 
 <body>
   <div class="counter">
-    <div id="num-container">
-      <div id="nums">
-        <span class="in">3</span>
-        <span>2</span>
-        <span>1</span>
-        <span>0</span>
-      </div>
-      <h4>Get Ready</h4>
+    <div class="nums">
+      <span class="in">3</span>
+      <span>2</span>
+      <span>1</span>
+      <span>0</span>
     </div>
-    <div id="go">
-      <h1>GO</h1>
-    </div>
+    <h4>Get Ready</h4>
   </div>
 
-  <div id="play">
-    <button>Countdown</button>
+  <div class="final">
+    <h1>GO</h1>
+    <button id="replay">Replay</button>
   </div>
 
   <script src="script.js"></script>
-  <script src="../iframe-full.js"></script>
-
 </body>
 
 </html>
