Misc Front-End - loader wallpaper. Animated Countdown - forced reload on each 3rd button press

--- a/50-projects-iframe/50-projects-i.html
+++ b/50-projects-iframe/50-projects-i.html
@@ -18,6 +18,7 @@
 
 <body>
   <div class="loader" id="loader">
+    <div id="loading-wallpaper">Miscellaneous Front-End Projects</div>
     <div class="loading-message">
       <span id="loading-message">Loading... </span>
       <span id="loading-remaining"></span>
