--- a/50-projects-iframe/50-projects-i.html
+++ b/50-projects-iframe/50-projects-i.html
@@ -20,9 +20,10 @@
   <div class="loader" id="loader">
     <div id="loading-wallpaper">Miscellaneous Front-End Projects</div>
     <div class="loading-message">
+      <!-- <span id="loading-remaining"></span>
       <span id="loading-message">Loading... </span>
-      <span id="loading-remaining"></span>
-      <img src="loader.svg" alt="Loading...">
+      <img src="loader.svg" alt="Loading..."> -->
+      <span class="animated-bg animated-bg-text">Loading... </span>
     </div>
     <div id="loading-instructions">
       <p>For any project, double click on the box to show it in full-screen mode.</p>
