--- a/50-projects-iframe-load-all/50-projects-i.html
+++ b/50-projects-iframe-load-all/50-projects-i.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- WIP Version w/out loader screen and w/ project boxes showing loading background until iframe loaded -->
 
 <head>
   <meta charset="UTF-8">
@@ -18,7 +17,7 @@
 </head>
 
 <body>
-  <div class="loader" id="loader" style="visibility: hidden">
+  <div class="loader" id="loader">
     <div id="loading-wallpaper">Miscellaneous Front-End Projects</div>
     <div class="loading-message">
       <!-- <span id="loading-remaining"></span>
@@ -33,16 +32,14 @@
     </div>
   </div>
 
-  <!-- <header class='header' style="visibility: hidden"> -->
-  <header class='header'>
+  <header class='header' style="visibility: hidden">
     <h1 class='title'>Miscellaneous Front-End Projects</h1>
     <h2 id="random"></h2>
   </header>
 
 
   <div id="projects-container">
-    <!-- <div id="projects" style="visibility: hidden"> -->
-    <div id="projects">
+    <div id="projects" style="visibility: hidden">
 
     </div>
   </div>
