--- a/50-projects-iframe/50-projects-i.html
+++ b/50-projects-iframe/50-projects-i.html
@@ -34,10 +34,10 @@
   </div>
 
   <!-- <header class='header' style="visibility: hidden"> -->
-  <header class='header'>
+  <div class='header'>
     <h1 class='title'>Miscellaneous Front-End Projects</h1>
     <h2 id="random"></h2>
-  </header>
+  </div>
 
 
   <div id="projects-container">
