--- a/50-projects-iframe/50-projects-i.html
+++ b/50-projects-iframe/50-projects-i.html
@@ -35,7 +35,7 @@
 
   <!-- <header class='header' style="visibility: hidden"> -->
   <div class='header'>
-    <h1 class='title'>Miscellaneous Front-End Projects</h1>
+    <h1 class='title'>Miscellaneous Front&#8209;End Projects</h1>
     <h2 id="random"></h2>
   </div>
 
