Misc Projects turn load all on/off, show progress on loading screen

--- a/50-projects-iframe -just-rounds/50-projects-i.html
+++ b/50-projects-iframe -just-rounds/50-projects-i.html
@@ -20,11 +20,11 @@
 <body>
   <div class="loader" id="loader" style="visibility: hidden">
     <div id="loading-wallpaper">Miscellaneous Front-End Projects</div>
-    <div id="loading-message-container">
+    <div class="loading-message">
       <!-- <span id="loading-remaining"></span>
       <span id="loading-message">Loading... </span>
       <img src="loader.svg" alt="Loading..."> -->
-      <span class="animated-bg" id="loading-message">Loading... </span>
+      <span class="animated-bg animated-bg-text">Loading... </span>
     </div>
     <div id="loading-instructions">
       <p>For any project, double click on the box to show it in full-screen mode.</p>
@@ -33,19 +33,19 @@
     </div>
   </div>
 
-
-  <div class='header' style="visibility:hidden">
+  <!-- <header class='header' style="visibility: hidden"> -->
+  <div class='header'>
     <h1 class='title'>Miscellaneous Front&#8209;End Projects</h1>
     <h2 id="random"></h2>
   </div>
 
 
   <div id="projects-container">
-    <div id="projects" style="visibility: hidden">
+    <!-- <div id="projects" style="visibility: hidden"> -->
+    <div id="projects">
 
     </div>
   </div>
-
   <div id="full-screen-message">
     Double-click in any box to open app in full screen
   </div>
