Misc Projects - More accurate loading message, exit loading screen button

--- a/50-projects-iframe/50-projects-i.html
+++ b/50-projects-iframe/50-projects-i.html
@@ -31,6 +31,7 @@
       <!-- (Then press "Esc" key to exit full-screen and see the main page again.) -->
       <p>Or click on the link below the box to open the project in another tab</p>
     </div>
+    <button id="loader-close-button" type="button">Click here to close this screen</button>
   </div>
 
 
@@ -46,7 +47,7 @@
     </div>
   </div>
 
-  <div id="full-screen-message">
+  <div id="full-screen-message" style="visibility: hidden">
     Double-click in any box to open app in full screen
   </div>
 
