Misc for loading in rounds. Remove 'load-all-first' from session storage instead of setting to false.

--- a/50-projects-iframe/50-projects-i-lr.html
+++ b/50-projects-iframe/50-projects-i-lr.html
@@ -10,7 +10,7 @@
 
 <body>
   <script>
-    sessionStorage.setItem('load-all-first', false);
+    sessionStorage.removeItem('load-all-first');
     document.location = "./50-projects-i.html";
   </script>
 </body>
