--- a/50-projects-iframe/50-projects-i-la.html
+++ b/50-projects-iframe/50-projects-i-la.html
@@ -10,7 +10,7 @@
 
 <body>
   <script>
-    sessionStorage.setItem('load-all-first', true);
+    sessionStorage.setItem('load-all-first', 'true');
     document.location = "./50-projects-i.html";
   </script>
 </body>
