Show Info only 75% of Image. Renamed '.summary' to '.show-info', remmed out old '.show-info' CSS

--- a/tv-search/test.html
+++ b/tv-search/test.html
@@ -12,6 +12,7 @@
   <div class="genre">
     <h3>Genres: Drama Children Science-Fiction </h3>
   </div>
+  <div> NOTHING -- JUST TRYING TO GET GIT TO RECOGNIZE CHANGE</div>
   <h3>Premiered: 1991-11-14</h3>
   <h3>Ended: 1991-12-19</h3>
 </div>
