--- a/drag-n-drop/index.html
+++ b/drag-n-drop/index.html
@@ -13,7 +13,7 @@
 <body>
   <div id="container">
 
-    <h1 class="header">Drag image from Box to Box</h1>
+    <h1 class="header">Drag Image from Box to Box (Mouse Devices Only)</h1>
     <div id="box-container">
       <div class="empty">
         <div class="fill" draggable="true"></div>
