Added headers with notes about mouse & doubleclick to Drawing app

--- a/drawing-app/index.html
+++ b/drawing-app/index.html
@@ -12,6 +12,10 @@
 </head>
 
 <body>
+  <h1>Drawing App</h1>
+  <h2> Works Best with Mouse in Fullscreen Mode</h2>
+  <h3>DoubleClick on Color to Duplicate</h3>
+
   <canvas id="canvas" width="800" height="800"></canvas>
   <div class="toolbox">
     <button id="decrease">-</button>
