Drawing App - Formatting Changes

--- a/drawing-app/index.html
+++ b/drawing-app/index.html
@@ -12,9 +12,9 @@
 </head>
 
 <body>
-  <h1>Drawing App</h1>
-  <h2> Works Best with Mouse in Fullscreen Mode</h2>
-  <h3>DoubleClick on Color to Duplicate</h3>
+  <h2>Drawing App</h2>
+  <h3> Works Best Using Mouse in Fullscreen Mode</h3>
+  <h4>DoubleClick on Color to Duplicate</h4>
 
   <canvas id="canvas" width="800" height="800"></canvas>
   <div class="toolbox">
