--- a/drawing-app/index.html
+++ b/drawing-app/index.html
@@ -14,7 +14,7 @@
 <body>
   <h2>Drawing App</h2>
   <h3> Works Best Using Mouse in Fullscreen Mode</h3>
-  <h4>DoubleClick on Color to Duplicate</h4>
+  <h4>DoubleClick on a Color on the Canvas to Duplicate</h4>
 
   <canvas id="canvas" width="800" height="800"></canvas>
   <div class="toolbox">
